syntax = "proto3";
package tutorial;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Protocol.Protobuf";

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phoneNumbers = 4;

  google.protobuf.Timestamp lastUpdated = 5;
}

message AddressBook {
  repeated Person people = 1;
}